# tagged-pointer-as-enum

./: Cargo.toml  README.md
.github/workflows/: test.yml
benches/: compare_with_enum.rs
src/: lib.rs  tagged_enum_macro.rs  tagged_pointer.rs  tagged_pointer_value.rs
src/macros/: auto_derive.rs  declare_tags.rs  mod.rs  tagged_enum_macro.rs
