[package]
edition = "2021"
name = "tagged-pointer-as-enum"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bench = ["criterion"]

[dependencies]
criterion = {version = "0.3", optional = true}

[[bench]]
harness = false
name = "compare_with_enum"
